--- a/app.json
+++ b/app.json
@@ -67,7 +67,14 @@
                       "url": "https://stable.grandcruwijnen.nl/"
                     }
                   }
-                }
+                },
+                "error": {
+      "type": "$util.banner",
+      "options": {
+        "title": "Error",
+        "description": "Something went wrong."
+      }
+    }
               }
             }
 
