--- a/app.json
+++ b/app.json
@@ -56,8 +56,7 @@
               "action": {
                 "type": "$href",
                 "options": {
-                  "url": "https://jasper-ketelaar.github.io/scanner.json",
-                  "transition": "modal"
+                  "url": "https://jasper-ketelaar.github.io/scanner.json"
                 },
                 "success": {
                   "type": "$href",
