--- a/app.json
+++ b/app.json
@@ -38,7 +38,7 @@
             "type": "$util.banner",
             "options": {
               "title": "Error",
-              "description": "Something went wrong"
+              "description": "Something went wrong {{$jason.ean}}"
             }
           }
         }
