--- a/app.json
+++ b/app.json
@@ -88,6 +88,7 @@
 
             {
               "image": "https://jasper-ketelaar.github.io/scan.png",
+              "text": "Scan barcode",
               "action": {
                 "type": "$href",
                 "options": {
