--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "$jason": {
     "head": {
       "title": "Grandcruwijnen",
+      "offline": "false",
       "description": "Online wijn kopen | Kies uit 2500+ kwaliteitswijnen - Grandcruwijnen  - Grandcruwijnen.nl",
       "actions": {
         "handleLink": [
