--- a/app.json
+++ b/app.json
@@ -88,7 +88,7 @@
             },
 
             {
-              "image": "https://jasper-ketelaar.github.io/scan.png",
+              "image": "https://jasper-ketelaar.github.io/scann.png",
               "text": "Scan barcode",
               "action": {
                 "type": "$href",
