--- a/app.json
+++ b/app.json
@@ -80,18 +80,27 @@
             {
               "image": "https://jasper-ketelaar.github.io/home.png",
               "text": "Home",
-              "url": "https://jasper-ketelaar.github.io/app.json"
+              "url": "https://jasper-ketelaar.github.io/app.json",
+              "style": {
+                 "height": "21"
+               }
             },
 
             {
               "image": "https://jasper-ketelaar.github.io/phone.png",
               "text": "Contact opnemen",
-              "url": "https://jasper-ketelaar.github.io/contact.json"
+              "url": "https://jasper-ketelaar.github.io/contact.json",
+              "style": {
+                 "height": "21"
+               }
             },
 
             {
               "image": "https://jasper-ketelaar.github.io/scan.png",
-           
+              "text": "Scan barcode",
+              "style": {
+                 "height": "21"
+               },
               "action": {
                 "type": "$href",
                 "options": {
